--- a/src/content/blog/improve-concentration/index.mdx
+++ b/src/content/blog/improve-concentration/index.mdx
@@ -1,15 +1,17 @@
 ---
 title: 'Tips to improve concentration'
-publishDate: 'May 10, 2025'
-updatedDate: 'June 12, 2025'
+publishDate: '2025-05-10'
+updatedDate: '2025-06-12'
 description: 'Mindfulness, cognitive training, and a healthy lifestyle may help sharpen your focus.'
 tags:
   - Example
   - Mind
   - Mood
 language: 'English'
-heroImage: { src: './thumbnail.jpg', color: '#9698C1' }
+heroImage: { src: thumbnail, color: '#9698C1' }
 ---
+
+import thumbnail from './thumbnail.jpg'
 
 import { Aside } from 'astro-pure/user'
 
