--- a/src/content/blog/improve-concentration/index.mdx
+++ b/src/content/blog/improve-concentration/index.mdx
@@ -1,5 +1,3 @@
-import thumbnail from './thumbnail.jpg'
-
 ---
 title: 'Tips to improve concentration'
 publishDate: '2025-05-10'
@@ -10,7 +8,7 @@ tags:
   - Mind
   - Mood
 language: 'English'
-heroImage: { src: thumbnail, color: '#9698C1' }
+heroImage: { src: './thumbnail.jpg', color: '#9698C1' }
 ---
 
 import { Aside } from 'astro-pure/user'
