--- a/src/content/blog/3d-rendering/index.mdx
+++ b/src/content/blog/3d-rendering/index.mdx
@@ -1,5 +1,3 @@
-import thumbnail from './thumbnail.jpg'
-
 ---
 title: "What Is 3D Rendering? Complete Guide to 3D Visualization"
 publishDate: '2024-02-09'
@@ -8,7 +6,7 @@ description: "3D imagery has the power to bring cinematic visions to life and he
 tags:
   - Example
 language: 'English'
-heroImage: { src: thumbnail, color: '#D58388' }
+heroImage: { src: './thumbnail.jpg', color: '#D58388' }
 ---
 
 3D rendering is all around us. From huge action movies to car commercials to previews of upcoming buildings or product designs, 3D visualization has become so widespread and realistic that you probably don’t even know it’s there.
