--- a/src/content/blog/markdown/index.mdx
+++ b/src/content/blog/markdown/index.mdx
@@ -1,12 +1,10 @@
-import thumbnail from './thumbnail.jpg'
-
 ---
 title: Markdown Syntax Support
 publishDate: '2023-07-26'
 description: 'Markdown is a lightweight markup language.'
 tags:
   - Markdown
-heroImage: { src: thumbnail, color: '#B4C6DA' }
+heroImage: { src: './thumbnail.jpg', color: '#B4C6DA' }
 language: 'English'
 ---
 
