--- a/src/content/blog/customize/index.mdx
+++ b/src/content/blog/customize/index.mdx
@@ -1,5 +1,3 @@
-import thumbnail from './thumbnail.jpg'
-
 ---
 title: Personalized Customization Guide
 publishDate: '2024-07-27'
@@ -8,7 +6,7 @@ tags:
   - Waline
   - Vercel
   - Supabase
-heroImage: { src: thumbnail, color: '#64574D' }
+heroImage: { src: './thumbnail.jpg', color: '#64574D' }
 language: 'English'
 ---
 
