--- a/src/content/blog/markdown-zh/index.mdx
+++ b/src/content/blog/markdown-zh/index.mdx
@@ -1,12 +1,10 @@
-import thumbnail from './thumbnail.jpg'
-
 ---
 title: Markdown 语法支持
 publishDate: '2023-07-26'
 description: 'Markdown 是一种轻量级的「标记语言」。'
 tags:
   - Markdown
-heroImage: { src: thumbnail, color: '#B4C6DA' }
+heroImage: { src: './thumbnail.jpg', color: '#B4C6DA' }
 language: '中文'
 ---
 
