--- a/src/content/blog/music-journey/index.mdx
+++ b/src/content/blog/music-journey/index.mdx
@@ -1,5 +1,3 @@
-import thumbnail from './thumbnail.jpg'
-
 ---
 title: The Impact of Technology on the Music World
 publishDate: '2024-11-30'
@@ -8,7 +6,7 @@ tags:
   - Example
   - Music
   - Technology
-heroImage: { src: thumbnail, color: '#4891B2' }
+heroImage: { src: './thumbnail.jpg', color: '#4891B2' }
 language: 'English'
 ---
 
